Example Docker nginx ssl

--- a/nginx/site/nginx-sites-api.conf
+++ b/nginx/site/nginx-sites-api.conf
@@ -1,14 +1,11 @@
 server {
 
-	# listen 443 ssl http2; # managed by Certbot
-    # ssl_certificate /etc/letsencrypt/live/quyenvk.click/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/live/quyenvk.click/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-	# server_name quyenvk.click;
-
-	listen 80;
-    listen [::]:80;
+	listen 443 ssl http2; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/quyenvk.click/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/quyenvk.click/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+	server_name quyenvk.click;
 
 	root /var/www/code/api/public;
 	index index.php;
@@ -78,8 +75,8 @@ server {
 	}
 }
 
-# server {
-#     listen 80;
-#     server_name quyenvk.click;
-#     return 301 https://quyenvk.click$request_uri;
-# }
+server {
+    listen 80;
+    server_name quyenvk.click;
+    return 301 https://quyenvk.click$request_uri;
+}
